--- a/scripts/conciergeSetup.cls
+++ b/scripts/conciergeSetup.cls
@@ -15,7 +15,7 @@ update settings;
 // put the contact on our user
 List<case> cases = new List<case>();
 
-contact jn = new contact(FirstName = 'Workshop', LastName = 'User', Email = 'shane.mclaughlin@salesforce.com', cncrgdemo__UserId__c = UserInfo.getUserId());
+contact jn = new contact(FirstName = 'Workshop', LastName = 'User', Email = 'shane.mclaughlin@salesforce.com', cncrgdemo2__UserId__c = UserInfo.getUserId());
 insert jn;
 
 // let's have some ticket history for Jenny
